--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -13,10 +13,13 @@
         android:layout_marginStart="104dp"
         android:layout_marginLeft="104dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginRight="94dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/text_dividend"
         android:inputType="number|numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
@@ -39,10 +42,13 @@
         android:layout_marginStart="104dp"
         android:layout_marginLeft="104dp"
         android:layout_marginTop="220dp"
+        android:layout_marginEnd="94dp"
+        android:layout_marginRight="94dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/text_dividend"
         android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,10 +84,13 @@
         android:layout_marginStart="96dp"
         android:layout_marginLeft="96dp"
         android:layout_marginTop="84dp"
+        android:layout_marginEnd="102dp"
+        android:layout_marginRight="102dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/text_dividend"
         android:inputType="number|numberDecimal"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
