-Changed the hints to be more meaningful -Hit rate wasn't precise enough, so I removed Math.round when calculating the hit rate.

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
         android:layout_marginRight="94dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/text_dividend"
+        android:hint="@string/text_weightHint"
         android:inputType="number|numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -75,7 +75,7 @@
         android:layout_marginRight="94dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/text_dividend"
+        android:hint="@string/text_rollHint"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -118,7 +118,7 @@
         android:layout_marginRight="102dp"
         android:autofillHints=""
         android:ems="10"
-        android:hint="@string/text_dividend"
+        android:hint="@string/text_dropRateHint"
         android:inputType="number|numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
