-Repositioned the elements on roll results screen. -Made main screen scrollable when you're entering values.

--- a/src/main/res/layout/activity_display_message.xml
+++ b/src/main/res/layout/activity_display_message.xml
@@ -15,9 +15,9 @@
             android:id="@+id/textView_seed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="52dp"
-            android:layout_marginLeft="52dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="16dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView11"
@@ -27,9 +27,9 @@
             android:id="@+id/textView11"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
             android:text="@string/text_seedValue"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,9 +39,9 @@
             android:id="@+id/textView_hitLocations"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="12dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -53,19 +53,19 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="56dp"
+            android:layout_marginTop="24dp"
             android:text="@string/text_hitLocations"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
         <TextView
             android:id="@+id/textView_hitRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="28dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView8"
@@ -75,9 +75,9 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/text_hitRate"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +89,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="20dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView7"
@@ -99,9 +99,9 @@
             android:id="@+id/textView7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/text_hitCount"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -111,9 +111,9 @@
             android:id="@+id/textView_weight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="20dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView6"
@@ -123,9 +123,9 @@
             android:id="@+id/textView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="20dp"
             android:text="@string/text_weightResult"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -135,13 +135,13 @@
             android:id="@+id/textView_percent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="108dp"
+            android:layout_marginLeft="108dp"
+            android:layout_marginTop="12dp"
             android:text="@string/text_percent"
             android:textSize="18sp"
-            app:layout_constraintStart_toEndOf="@+id/textView_dropRate"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_dropRate" />
 
         <TextView
             android:id="@+id/text_currentRoll"
@@ -160,21 +160,21 @@
             android:id="@+id/textView_fraction"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="12dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="12dp"
             android:text="@string/text_Fraction"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView_percent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView_dropRate" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="48dp"
             android:text="@string/text_RollTotalText"
             android:textSize="18sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -184,9 +184,9 @@
             android:id="@+id/textView_rolls"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="48dp"
             android:text="0"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView4"
@@ -196,8 +196,8 @@
             android:id="@+id/textView_dropRate"
             android:layout_width="65dp"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginLeft="12dp"
             android:layout_marginTop="16dp"
             android:textSize="18sp"
             app:layout_constraintStart_toEndOf="@+id/textView"
@@ -207,8 +207,8 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="33dp"
-            android:layout_marginLeft="33dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:text="@string/text_dropRate"
             android:textSize="18sp"
